fix whitespace

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -110,6 +110,31 @@ li.language-switch a {
   color: white;
 }
 
+.cv-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.cv-table td,
+.cv-table th {
+  border: none !important;
+  padding: 0;
+  margin: 0;
+  vertical-align: top;
+}
+
+.cv-table td:first-child,
+.cv-table th:first-child {
+  width: 120px;
+  min-width: 120px;
+  white-space: nowrap;
+  padding-right: 3rem;
+}
+
+.cv-table th:empty {
+  display: none;
+}
+
 @media screen and (max-width: 992px) {
  html,
   body {
@@ -151,6 +176,13 @@ li.language-switch a {
     font-size: 16px;
     padding: 10px 12px;
     margin: 0;
+  }
+
+  .cv-table td:first-child,
+  .cv-table th:first-child {
+    width: 85px;
+    min-width: 85px;
+    padding-right: 1.0rem;
   }
 }
 
